# aiida-orca

./: .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .readthedocs.yml  .style.yapf  README.md  conftest.py  myinp.inp  pyproject.toml  pytest.ini  setup.json  setup.py
.github/: check_version.py  get_orca.sh  setup.sh
.github/workflows/: build.yml  ci.yml  publish_on_pypi.yml
aiida_orca/: __init__.py
aiida_orca/calculations/: __init__.py  orca_asa.py  orca_main.py  orca_orca.py
aiida_orca/parsers/: __init__.py
aiida_orca/parsers/cclib/: __init__.py  ccio.py  data.py  logfileparser.py  orcaparser.py  utils.py
aiida_orca/utils/: __init__.py  input_generator.py
aiida_orca/workchains/: __init__.py  base.py
docs/source/: conf.py  index.rst
docs/source/apidoc/: aiida_orca.calculations.rst  aiida_orca.parsers.rst  aiida_orca.rst  aiida_orca.utils.rst  aiida_orca.workchains.rst
docs/source/developer_guide/: index.rst
docs/source/user_guide/: get_started.rst  tutorial.rst
examples/: .aiida.out.swp  aiida.out  ch4.xyz  conftest.py  example_0.py  example_1.py  example_2.py  example_3.py  example_4.py  example_5.py  example_freq.py  example_hf.py  example_numfreq_restart.py  example_opt.py  example_opt_anfreq.py  example_opt_numfreq.py  example_opt_restart.py  h2co.xyz  opt.xyz  pytest.ini
tests/: conftest.py
tests/calculations/: test_orca.py
tests/calculations/test_orca/: test_default.in
tests/parsers/: test_orca.py
tests/parsers/fixtures/orca/default/: aiida.out
tests/parsers/fixtures/orca/tddft/: aiida.out
tests/parsers/fixtures/orca/unsuccessful/: README  aiida.xyz
tests/parsers/fixtures/orca/unsuccessfull/: aiida.out
tests/parsers/test_orca/: test_orca_default.yml  test_orca_tddft.yml  test_orca_unrestricted.yml  test_orca_unsuccessful.yml
